src/test/ui/consts/control-flow/loop.stderr
error[E0658]: `for` is not allowed in a `const`
  --> $DIR/loop.rs:53:5
   |
LL | /     for i in 0..4 {
LL | |         x += i;
LL | |     }
   | |_____^
   |
   = note: see issue #87575 <https://github.com/rust-lang/rust/issues/87575> for more information
   = help: add `#![feature(const_for)]` to the crate attributes to enable

error[E0658]: `for` is not allowed in a `const`
  --> $DIR/loop.rs:57:5
   |
LL | /     for i in 0..4 {
LL | |         x += i;
LL | |     }
   | |_____^
   |
   = note: see issue #87575 <https://github.com/rust-lang/rust/issues/87575> for more information
   = help: add `#![feature(const_for)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
